# derive

./: .gitignore  CMakeLists.txt  README.md  api.cpp  derive.cpp  dirs.h
include/: api.h  derive.h
test/: CMakeLists.txt  showy-meal.derive.h  test.cpp
